# packages/api-client/openapi.json
@@ -4714,6 +4714,15 @@
             "schema": {
               "type": "string"
             }
+          },
+          {
+            "name": "sessionId",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "string",
+              "nullable": true
+            }
           }
         ],
         "responses": {
